# DragonCenterForLinux

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  config.yaml  default.nix  dragon-center-daemon  flake.nix  service.nix  tauri.conf.json
apps/dragon-center-service/: Cargo.toml
apps/dragon-center-service/src/: cli.rs  main.rs  server.rs
crates/dragon-center-api/: Cargo.toml
crates/dragon-center-api/src/: commands.rs  lib.rs
dragon-center-gui/: Cargo.toml  tauri.conf.json
dragon-center-gui/frontend/: index.html  main.js  styles.css
dragon-center-gui/src/: lib.rs  main.rs
dragon-center-lib/: Cargo.toml
dragon-center-lib/src/: battery.rs  cooler_boost.rs  fan.rs  lib.rs  permission.rs  shift.rs  utils.rs
frames/: Window.glade
old/: Makefile
old/resources/ui/: Window.glade
old/src/dragon_utils/: dragon_utils.c
old/src/utils/: file_utils.c  file_utils.h
resources/ui/: Window.glade  Window.glade~
src/: cli.rs  client.rs  commands.rs  config.rs  daemon.rs  data.rs  ec.rs  env.h  gui.rs  ipc.rs  main.c  main.rs  tray.rs  ui.c  ui.h
src/dragon_utils/: dragon_utils.c  dragon_utils.h
src/headers/: dragon_utils.h  env.h  file_utils.h
src/source/: dragon_utils.c  file_utils.c
src/utils/: file_utils.c
ui/: appwindow.slint  index.css  index.html
