[package]
name = "dragon-center-for-linux"
version = "0.1.0"
description = "A Tauri App"
authors = ["m1dugh <romain103paris@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/m1dugh/DragonCenterForLinux.git"
default-run = "dragon-center-for-linux"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.5.16", features = ["derive"] }
daemonize = "0.5.0"
nix = { version = "0.29.0", features = ["user"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = []
