[workspace]
resolver = "2"
members = [
    "apps/dragon-center-service",
    "crates/dragon-center-api"
]
[workspace.package]
name = "dragon-center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
daemonize = "0.5.0"
env_logger = "0.11.5"
ksni = "0.2.2"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
slint = "1.7.2"
string-builder = "0.2.0"
tokio = { version = "1.41.0", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
